Try generate jre