@@ -3,12 +3,26 @@ ARG MCRCON_TAR_FILE=mcrcon-0.0.6-linux-x86-64.tar.gz
 ARG FABRIC_INSTALLER=0.10.0
 ARG MINECRAFT_VERSION=1.18
 
-FROM eclipse-temurin:17 as builder
+FROM eclipse-temurin:17 as jre-build
+
+# Create a custom Java runtime
+RUN $JAVA_HOME/bin/jlink \
+    --add-modules ALL-MODULE-PATH \
+    --strip-debug \
+    --no-man-pages \
+    --no-header-files \
+    --compress=2 \
+    --output /javaruntime
+
+FROM debian:bullseye-slim as builder
 ARG MCRCON_VERSION
 ARG MCRCON_TAR_FILE
 ARG FABRIC_INSTALLER
 ARG MINECRAFT_VERSION
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
 WORKDIR /app/minecraft
+COPY --from=jre-build /javaruntime $JAVA_HOME
 COPY app /app
 
 RUN apt-get update && apt-get install -y wget ca-certificates
@@ -41,7 +55,11 @@ RUN wget --progress=bar:force --content-disposition -P mods "https://ci.lucko.me
 ## Hydrogen
 RUN wget --progress=bar:force --content-disposition -P mods "https://cdn.discordapp.com/attachments/361495932971515904/916695488563130398/hydrogen-fabric-mc1.18-0.3-SNAPSHOT.jar"
 
-FROM eclipse-temurin:17
+FROM debian:bullseye-slim
+ENV JAVA_HOME=/opt/java/openjdk
+ENV PATH "${JAVA_HOME}/bin:${PATH}"
+COPY --from=jre-build /javaruntime $JAVA_HOME
+
 # Env setup
 ENV PATH="/app/control:${PATH}"
 
